--- a/src/layouts/default-layout.astro
+++ b/src/layouts/default-layout.astro
@@ -88,6 +88,6 @@ const fullOgImageUrl = new URL(ogImage, baseUrl).href;
 
   #main-content {
     /* 減去 Navbar height + Footer height */
-    min-height: calc(100vh - 114px);
+    min-height: calc(100dvh - 114px);
   }
 </style>
