--- a/src/styles/bootstrap.scss
+++ b/src/styles/bootstrap.scss
@@ -54,3 +54,7 @@ $enable-negative-margins: true;
 
 // Optional utilities
 @import 'bootstrap/scss/utilities/api';
+
+// Custom styles
+@import 'font';
+@import 'admonitions';
