--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -1,6 +1,6 @@
 ---
-import type { CategoryWithNotes } from '../../utils/notes';
-import NotesNavigation from './notes-navigation.astro';
+import type { CategoryWithNotes } from '../utils/notes';
+import NotesNavigation from './notes/notes-navigation.astro';
 
 interface Props {
   navigation: CategoryWithNotes[];
@@ -10,7 +10,7 @@ interface Props {
 const { navigation, activeId } = Astro.props;
 ---
 
-<aside class="d-none d-lg-block px-2 ms-n2 pt-1 mt-n1">
+<aside class="d-none d-lg-block ps-1 pe-2 pt-1 mt-n1 w-100" style={{ maxWidth: '200px' }}>
   <nav aria-label="研究筆記側邊導覽">
     <NotesNavigation navigation={navigation} activeId={activeId} id="notes-sidebar-accordion" />
   </nav>
