--- a/src/components/navbar/notes-menu.astro
+++ b/src/components/navbar/notes-menu.astro
@@ -19,7 +19,7 @@ const { notesNavigation, activeNoteId } = Astro.props as Props;
     <i class="bi bi-arrow-left me-1"></i>
     回到主選單
   </button>
-  <div class="notes-drawer">
+  <div class="notes-drawer px-2">
     <NotesNavigation
       navigation={notesNavigation}
       activeId={activeNoteId}
@@ -54,6 +54,5 @@ const { notesNavigation, activeNoteId } = Astro.props as Props;
   .notes-drawer {
     max-height: calc(100dvh - 200px);
     overflow-y: auto;
-    padding-right: 0;
   }
 </style>
