feat: configure scrollbar styles

--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -29,12 +29,11 @@ const { navigation, activeId } = Astro.props;
   }
 
   aside::-webkit-scrollbar-track {
-    padding: 0;
     background: transparent;
   }
 
   aside::-webkit-scrollbar-thumb {
-    background: rgb(var(--bs-primary-rgb), 0.6);
-    border-radius: 4px;
+    background: rgb(var(--bs-primary-rgb), 0.4);
+    border-radius: 0;
   }
 </style>
