chore: remove line seed

--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -21,6 +21,7 @@ const { navigation, activeId } = Astro.props;
     position: sticky;
     top: 5rem;
     max-height: calc(100dvh - 5rem);
+    height: 100%;
     overflow: scroll;
   }
 
