--- a/src/layouts/article-layout.astro
+++ b/src/layouts/article-layout.astro
@@ -22,7 +22,7 @@ const { title, description, navigation, activeId, headings = [], showToc = true 
     <div class="d-flex">
       <NotesSidebar navigation={navigation} activeId={activeId} />
       <!-- 內文 -->
-      <div class="flex-grow-1">
+      <div>
         <slot />
       </div>
 
