refactor: configure css

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,6 +1,17 @@
-<footer class="py-3 bg-body-secondary text-center">
+<footer class="footer py-3 bg-body-secondary text-center">
   <div>
     © 2025 Pen's Pulse. All rights reserved. <br class="d-lg-none" />
     <a href="mailto:penspulse@gmail.com" class="text-decoration-none">✉️ penspulse@gmail.com</a>
   </div>
 </footer>
+
+<style>
+  /* 頁尾高度設定 */
+  .footer {
+    height: 80px;
+
+    @media (width >= 992px) {
+      height: 56px;
+    }
+  }
+</style>
