--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -10,13 +10,14 @@ interface Props {
 const { navigation, activeId } = Astro.props;
 ---
 
-<aside class="d-none d-lg-block ps-1 pe-2 pt-1 mt-n1 w-100" style={{ maxWidth: '200px' }}>
+<aside class="d-none d-lg-block ps-1 pe-2 pt-1 mt-n1" style={{ width: '200px' }}>
   <nav aria-label="研究筆記側邊導覽">
     <NotesNavigation navigation={navigation} activeId={activeId} id="notes-sidebar-accordion" />
   </nav>
 </aside>
 
 <style>
+  /* 側邊欄樣式 */
   aside {
     position: sticky;
     top: 5rem;
@@ -25,6 +26,7 @@ const { navigation, activeId } = Astro.props;
     overflow: scroll;
   }
 
+  /* 捲軸樣式 */
   aside::-webkit-scrollbar {
     width: 6px;
   }
